2006-08-09  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: removed cvs diff tag information that was mistakenly incorporated into file.

2006-08-09  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: now concatenates all computed drift vectors for all beads instead of just the last one.

2006-08-08  Jeremy Cribb <jcribb@email.unc.edu>
	* remove_drift.m: removed text output that reported how much drift was removed.  This information is already an output variable.

2006-08-02  Jeremy Cribb <jcribb@email.unc.edu>
	* video_tracking_constants.m: removed PULSE and SEQ column headers.  added documentation.

2006-07-03  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m:
	- Increased the filter order to 8 for reducing stage sensor electronic noise, in order to achieve steep rolloff.
	- Reduced the cutoff frequency to 550, still sticking to butterworth for its monotonicity.

2006-06-20  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m:
	- Fixed a bug while checking if filtering of stage position from input edited file is possible.

2006-06-19  Jeremy Cribb <jcribb@email.unc.edu>
	* video_tracking_constants.m: added PULSE and SEQ to column headers.
	* remove_drift.m: only existing trackers are queried.

2006-06-16  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m:
	- Now facilitates filtering of stage sensed position even when the saved .edited.mat file has unfiltered stage position. 
	- This is possible for only a limited set of circumstances e.g. EITHER bead & error signal OR stage have to be present in saved file.
	- Fixed documentation.

2006-06-15  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m:
	- For .edited format, now stores the name at the time of loading as the current name of the file.
	- If this name is different than the name stored, designates the stored name as the previous name.
	- Same for path. This helps in tracking down the changes made to the location of the file.
